@@ -3,6 +3,7 @@ Revision history for SPVM
 0.9118  2021-01-13
         [CHANGES]
         * Add cc_each, ccflags_each methods to SPVM::Builder::Config.
+        * Remove perllib $Config{bin} dependency of creating Windows DLL.
         [FIX BUGS]
         * Fix the document that ccflags and ldflags of SPVM::Builder::Config default value is empty string.
           The right description is an array reference that has default values.
